--- a/Randog/View/Base.lproj/Main.storyboard
+++ b/Randog/View/Base.lproj/Main.storyboard
@@ -16,21 +16,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CsZ-Bf-Rt8">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9hD-40-eGE">
                                 <rect key="frame" x="20" y="44" width="374" height="818"/>
-                            </imageView>
+                                <subviews>
+                                    <pickerView contentMode="scaleAspectFit" semanticContentAttribute="playback" translatesAutoresizingMaskIntoConstraints="NO" id="2zz-X1-fWZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="216"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="jv3-SA-Fjj"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="jdI-15-ESw"/>
+                                        </connections>
+                                    </pickerView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CsZ-Bf-Rt8">
+                                        <rect key="frame" x="0.0" y="216" width="374" height="602"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="602" id="xiB-dl-aSi"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="CsZ-Bf-Rt8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="DkO-lF-au5"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CsZ-Bf-Rt8" secondAttribute="trailing" constant="20" id="cw6-dm-wSv"/>
-                            <constraint firstItem="CsZ-Bf-Rt8" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="guo-dW-uRn"/>
-                            <constraint firstItem="CsZ-Bf-Rt8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="nPz-Ex-XTm"/>
+                            <constraint firstItem="9hD-40-eGE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="0tc-U4-HLv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9hD-40-eGE" secondAttribute="trailing" constant="20" id="5Bm-NH-H9F"/>
+                            <constraint firstItem="9hD-40-eGE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Fvq-rP-xTo"/>
+                            <constraint firstItem="9hD-40-eGE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hkn-UM-YTA"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="CsZ-Bf-Rt8" id="Kih-oY-f7c"/>
+                        <outlet property="pickerView" destination="2zz-X1-fWZ" id="23I-6r-GXD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
